// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foundry-agent-run - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Invoke and test deployed agents in Azure AI Foundry. Send messages to prompt and hosted agents, support single-turn and multi-turn conversations, and verify agent readiness.
USE FOR: invoke agent, test agent, send message, run agent, conversation with agent, chat with agent, agent response, try agent, talk to agent.
DO NOT USE FOR: deploying or creating agents (use foundry-agent-deploy), containerizing projects or building Docker images (use foundry-agent-package), Azure Functions (use azure-functions).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "azure",
    "azure-functions",
    "building",
    "chat",
    "container",
    "containerizing",
    "conversation",
    "conversations",
    "creating",
    "deploy",
    "deployed",
    "deploying",
    "docker",
    "foundry",
    "foundry-agent-deploy",
    "foundry-agent-package",
    "functions",
    "hosted",
    "images",
    "invoke",
    "mcp",
    "message",
    "messages",
    "multi-turn",
    "projects",
    "prompt",
    "readiness",
    "response",
    "run",
    "send",
    "single-turn",
    "support",
    "talk",
    "test",
    "verify",
    "with",
  ],
  "name": "foundry-agent-run",
}
`;

exports[`foundry-agent-run - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "azure",
  "azure-functions",
  "building",
  "chat",
  "container",
  "containerizing",
  "conversation",
  "conversations",
  "creating",
  "deploy",
  "deployed",
  "deploying",
  "docker",
  "foundry",
  "foundry-agent-deploy",
  "foundry-agent-package",
  "functions",
  "hosted",
  "images",
  "invoke",
  "mcp",
  "message",
  "messages",
  "multi-turn",
  "projects",
  "prompt",
  "readiness",
  "response",
  "run",
  "send",
  "single-turn",
  "support",
  "talk",
  "test",
  "verify",
  "with",
]
`;
